--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
                 </div> <!-- close footer-social -->
             </div> <!-- close container -->
         </footer>
+    <script src="script.js"></script>
 </body>
 </html>
 
