--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Princess James: Data Analyst</title>
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
-    <!-- Mobile Menu Toggle -->
-    <button class="mobile-menu-toggle" id="mobileMenuToggle">
-        <i class="fas fa-bars"></i>
-    </button>
+
+    <header class="header">
+        <div class="container header-inner">
+
+            <button class="mobile-menu-toggle" id="mobileMenuToggle">
+                <i class="fas fa-bars"></i>
+            </button>
+
+            <h1 class="logo">Princess James Portfolio</h1>
+
+            <div class="social-links">
+                ...
+            </div>
+
+        </div>
+    </header>
     <div id="sidebar" class="sidebar">  
         <div class="sidebar-content">
             <div class="search-box">
