--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@
 </head>
 
 <body>
-    <div id="sidebar" class="sidebar">  
-        <div class="sidebar-content">
-            <div class="search-box">
-                <input type="text" placeholder="Search" id="searchInput">
-                <i class="fas fa-search"></i>
+
+    <header class="header">
+        <div class="container header-inner">
+
+            <button class="mobile-menu-toggle" id="mobileMenuToggle">
+                <i class="fas fa-bars"></i>
+            </button>
+
+            <h1 class="logo">Princess James Portfolio</h1>
+
+            <div class="social-links">
+                ...
             </div>
+
+        </div>
+    </header>
 
             <div class="menu-section">
                 <h2>Menu</h2>
