--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         </div>
                         <div class="contact-info">
                             <h3>Email</h3>
-                            <a href="/cdn-cgi/l/email-protection#93e3e1fafdf0f6e0e0f9f2fef6e0a6a5a0d3f4fef2faffbdf0fcfe"><span class="__cf_email__" data-cfemail="5626243f38353325253c373b332563606516313b373f3a7835393b">[email&#160;protected]</span></a>
+                            <a href="mailto:princessjames563@gmail.com">princessjames563@gmail.com</a>
                         </div>
                     </div>
                     <div class="contact-card">
