--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </div>
                     <div class="certification-card">
                         <div class="certification-image">
-                            <img src="certificate.jpg" alt="Afriment Data Analysis Certificate">
+                            <img src="Certificate 2.png" alt="Google Data Analytics Certificate">
                         </div>
                         <div class="certification-content">
                             <h3>Google Data Analytics Certificate</h3>
@@ -169,7 +169,7 @@
                         </div>
                         <div class="contact-info">
                             <h3>Phone</h3>
-                            <a href="tel:+2349021977816">+234 902 197 7816</a>
+                            <a href="tel:+2349021977816">+234 9021977816</a>
                         </div>
                     </div>
                     <div class="contact-card">
