--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
             <div class="container">
                 <h2 class="section-heading">Resume</h2>
                 <div class="resume-content">
-                    <p class="resume-note">"Interested in my background? Click below to view or download my complete resume with detailed project experience and technical competencies"</p>
+                    <p class="resume-note">"Interested in my background?
+                        Click below to view or download my complete resume with detailed project
+                        experience and technical competencies"</p>
                     <a href="#contact" class="btn-primary">Download Resume </a>
                 </div>
             </div>
