--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="profile-content">
                     <div class="profile-text">
                         <h2 class="main-heading">Hi, I'm Princess James</h2>
-                        <p>class="subtitle">WELCOME TO MY PORTFOLIO WEBSITE</p>
+                        <p class="subtitle">WELCOME TO MY PORTFOLIO WEBSITE</p>
                         <p class="description">
                             My journey into data analysis began with curiosity about the stories hidden in data. Transforming raw data into meaningful insights using Excel, SQL, and 
                             Power BI makes it more realistic.Through hands-on projects, I’ve developed strong skills in data cleaning, analysis, and dashboard creation, with a focus on 
