--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         </div>
                         <div class="contact-info">
                             <h3>Phone</h3>
-                            <a href="tel:+2349021977816">+234 9021977816</a>
+                            <a href="tel:+(234)9021977816">+(234)9021977816</a>
                         </div>
                     </div>
                     <div class="contact-card">
