--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   </button>
                 <h1 class="logo">Princess James PortFolio</h1>
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/princessani" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/princessannie" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="https://medium.com/@princessjames563" target="_blank" aria-label="Medium"><i class="fab fa-medium"></i></a>
                     <a href="https://github.com/Princess-Annie" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 </div>
@@ -193,7 +193,7 @@
             <div class="container">
                 <p>&copy; 2025 Princess James. All rights reserved.</p>
                 <div class="footer-social">
-                    <a href="https://www.linkedin.com/in/princessani" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/princessannie" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="https://medium.com/@princessjames563" target="_blank" aria-label="Medium"><i class="fab fa-medium"></i></a>
                     <a href="https://github.com/Princess-Annie" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 </div> <!-- close footer-social -->
