--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/princessannie" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="https://medium.com/@princessjames563" target="_blank" aria-label="Medium"><i class="fab fa-medium"></i></a>
-                    <a href="https://github.com/Princess-Annie" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/princess-annie" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </header>
@@ -195,7 +195,7 @@
                 <div class="footer-social">
                     <a href="https://www.linkedin.com/in/princessannie" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="https://medium.com/@princessjames563" target="_blank" aria-label="Medium"><i class="fab fa-medium"></i></a>
-                    <a href="https://github.com/Princess-Annie" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/princess-annie" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 </div> <!-- close footer-social -->
             </div> <!-- close container -->
         </footer>
